# flights-mcp-server

./: flights.py  pyproject.toml  test_client.py
