[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-flights-mcp-server"
version = "0.1.0"
description = "Google Flights MCP Server !!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-flights>=2.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "playwright>=1.40.0",
]

[project.scripts]
google-flights-mcp-server = "flights:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
